# FASTAPI

./: .env  .gitignore  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  auth.py  corsissues.py  create_migration.sh  database.py  docker-compose.yml  main.py  models.py  prestart.sh  pyproject.toml  requirements.txt  schemas.py  start.sh
.github/workflows/: sync-to-github_application.yml
alembic/: __init__.py  env.py
alembic/versions/: 0cd72bfb8d35_adding_the_chatting_message_model.py  4f71e64dbb81_uploading_the_file.py  74d1d33f0959_all_the_model_changes.py  b3c0562df721_describe_change.py  d197e0b2fe67_describe_change.py  dee4b776a816_adding_the_tables.py
app/: init.sql   main.py
app/alembic/: env.py
app/alembic/versions/: 646356003d50_adding_the_user_info.py
app/db/: db_configuration.py  init_db.py  rabbitmq_connetion.py
app/middleware/: middleware.py
app/model/: __init__.py  chat_message.py  genai_chat.py  upload_doc.py  upload_files.py  user.py
app/rabbitmq/: publisher.py  worker.py
app/router/: chat_router.py  uploaded_file_router.py  user_router.py
app/schema/: chat_message.py  upload_file_schema.py  user_schema.py
app/service/: chat_service.py  upload_file_service.py  user_services.py
